tests/semantic_errors/andrei1_3.tl
require "ifj21"

function main()
    func()
end

main()
